# everywhere

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
data_test/: apples.txt  berlin.txt  cat_animal.txt  cat_unix.txt
data_test/code/: algorithms.py  web_components.js
data_test/docs/: platos_republic_gutenberg.epub
data_test/edge_cases/: multilingual.txt  unicode_madness.txt
data_test/literature/: modern_poetry.txt  shakespeare.txt
data_test/science/: calculus_notes.txt  quantum_physics.txt
docs/: architecture.md
everywhere/: __init__.py  __main__.py
everywhere/app/: app.py  app_config.py  collector.py  directory_selector.py  progress.py  search_controller.py  status_bar.py
everywhere/app/commands/: directory_index.py
everywhere/app/widgets/: results_table.py  search_bar.py  status_bar.py
everywhere/common/: ann.py  ann_protocol.py  app.py  clock.py  debounce.py  pydantic.py
everywhere/events/: __init__.py  ann.py  app.py  core.py  search_provder.py  search_provider.py  watcher.py
everywhere/handlers/: handler.py  router.py  text.py  text_file.py
everywhere/index/: ann.py  document_index.py  fs_index.py  fs_watchdog.py
everywhere/search/: search_provider.py  tantivy_search.py  text_embedding_search.py
everywhere/search/text/: chunking.py  onnx_embedder.py  parsing.py
everywhere/search_providers/: aggregated.py  document_extractor.py  embedding_backend.py  fs_search.py  onnx_text_search.py  search_provider.py  text_embedding_search.py
everywhere/search_providers/text/: onnx_embedder.py
everywhere/watchers/: fs_watcher.py  watcher.py
notebooks/: embed.ipynb  simple.ipynb
tests/: conftest.py  test_ann_index.py  test_contracts.py  test_document_index.py  test_edge_cases.py  test_integration.py  test_search_controller.py  test_search_providers.py  test_utils.py
